--- a/bower.json
+++ b/bower.json
@@ -4,22 +4,15 @@
   "dependencies": {
     "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
-    "angular-cookies": "~1.4.0",
     "angular-leaflet-directive": "angular-leaflet#~0.8.8",
     "angular-material": "~0.9.7",
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
     "angular-ui-router": "~0.2.15",
-    "animate.css": "~3.3.0",
-    "jquery": "~2.1.4",
-    "malarkey": "yuanqing/malarkey#~1.3.0",
-    "moment": "~2.10.3",
-    "ngFx": "~1.1.0",
-    "toastr": "~2.1.1",
-    "angular-resource": "~1.4.7",
     "angular-messages": "~1.4.7",
     "angular-material-icons": "~0.6.0",
-    "svg-morpheus": "~0.1.8"
+    "angular-resource": "~1.4.7",
+    "angular.easypiechart.min": "https://raw.githubusercontent.com/rendro/easy-pie-chart/master/dist/angular.easypiechart.min.js"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
